fix ~ graphiql docs arrow alignment

--- a/console/src/components/Services/ApiExplorer/GraphiQLWrapper/GraphiQL.css
+++ b/console/src/components/Services/ApiExplorer/GraphiQLWrapper/GraphiQL.css
@@ -132,11 +132,11 @@
   content: '';
   display: inline-block;
   height: 9px;
-  margin: 0 3px -1px 0;
   position: relative;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   width: 9px;
+  margin: 0 4px;
 }
 
 .graphiql-container .editorBar {
